include_directories(${Boost_INCLUDE_DIRS} ${PROTOBUF_INCLUDE_DIRS})
add_executable(server server_asio.cpp)
add_executable(client Sync_client.cpp)
add_executable(test test.cpp )
target_link_libraries(server src ${Boost_LIBRARIES})
target_link_libraries(client ${Boost_LIBRARIES})
target_link_libraries(test proto_gen_cxx ${Boost_LIBRARIES} )
