include_directories(${Boost_INCLUDE_DIRS} ${PROTOBUF_INCLUDE_DIRS})
add_executable(server server_asio.cpp)
add_executable(client Sync_client.cpp)
add_executable(test test.cpp )
add_executable(HttpClient HttpClient.cpp)
add_executable(HttpServer HttpServer.cpp)
add_executable(WebSocketServer WebSocketServer.cpp)
target_link_libraries(server src proto_gen_cxx ${Boost_LIBRARIES} ${JSONCPP_LIBRARIES})
target_link_libraries(client proto_gen_cxx ${Boost_LIBRARIES} ${JSONCPP_LIBRARIES})
target_link_libraries(test proto_gen_cxx ${Boost_LIBRARIES} ${JSONCPP_LIBRARIES} )
target_link_libraries(HttpServer src ${BOOST_LIBRARIES} ${JSONCPP_LIBRARIES})
target_link_libraries(HttpClient ${BOOST_LIBRARIES} ${JSONCPP_LIBRARIES})
target_link_libraries(WebSocketServer src ${BOOST_LIBRARIES} ${JSONCPP_LIBRARIES})
